# Compack3D

./: .gitignore  CMakeLists.txt  README.md
benchmarks/: CMakeLists.txt  Compack3D_benchmark_cuda_api_dim_i.cpp  Compack3D_benchmark_cuda_api_dim_j.cpp  Compack3D_benchmark_cuda_api_dim_k.cpp  Compack3D_benchmark_kernels_stencil_7.cpp  Compack3D_benchmark_local_pcr.cpp
src/: CMakeLists.txt  Compack3D_api.cpp  Compack3D_api.h  Compack3D_penta.cpp  Compack3D_penta.h  Compack3D_penta_kernels.cu  Compack3D_penta_kernels.cuh  Compack3D_tri.cpp  Compack3D_tri.h  Compack3D_tri_kernels.cu  Compack3D_tri_kernels.cuh  Compack3D_utils.cpp  Compack3D_utils.h  Compack3D_utils_kernels.cu  Compack3D_utils_kernels.cuh
stencils/: CMakeLists.txt  Compack3D_stencil_api.h  Compack3D_stencils.h  Compack3D_stencils_kernels.cu  Compack3D_stencils_kernels.cuh
unit_tests/: CMakeLists.txt  unit_test_band_solve_3x3.cpp  unit_test_band_solve_5x5.cpp  unit_test_cuda_api_dim_i.cpp  unit_test_cuda_api_dim_k.cpp  unit_test_cuda_dist_solve_dim_i.cpp  unit_test_cuda_dist_solve_dim_j.cpp  unit_test_cuda_dist_solve_dim_k.cpp  unit_test_cuda_local_solve_penta_dim_i.cpp  unit_test_cuda_local_solve_penta_dim_j.cpp  unit_test_cuda_local_solve_penta_dim_k.cpp  unit_test_cuda_local_solve_tri_dim_i.cpp  unit_test_cuda_local_solve_tri_dim_j.cpp  unit_test_cuda_local_solve_tri_dim_k.cpp  unit_test_cuda_penta_api_dim_j.cpp  unit_test_cuda_penta_api_dim_k.cpp  unit_test_cuda_tri_api_dim_i.cpp  unit_test_cuda_tri_api_dim_j.cpp  unit_test_cuda_tri_api_dim_k.cpp  unit_test_cuda_utils_copy_slices.cpp  unit_test_cuda_vanilla_dist_solve_penta.cpp  unit_test_cuda_vanilla_dist_solve_tri.cpp  unit_test_explicit_central_diff_stencil_7_dim_i.cpp  unit_test_explicit_central_diff_stencil_7_dim_j.cpp  unit_test_explicit_central_diff_stencil_7_dim_k.cpp  unit_test_local_fact_index.cpp  unit_test_local_fact_penta.cpp  unit_test_local_fact_tri.cpp  unit_test_vanilla_dist_solve.cpp  unit_test_vanilla_local_solve_batch.cpp
